--- a/19-DivaLinks.tex
+++ b/19-DivaLinks.tex
@@ -27,7 +27,7 @@ Ocean Data View\\
 \url{http://odv.awi.de/}
 \end{minipage}
 
-\item[\raisebox{-4mm}{\includegraphics[height=1cm]{netcdfico}}] \begin{minipage}{12cm}
+\item[\raisebox{-4mm}{\includegraphics[height=1cm]{netcdf_logo}}] \begin{minipage}{12cm}
 NetCDF\\
 \url{http://www.unidata.ucar.edu/software/netcdf/}
 \end{minipage}
@@ -43,12 +43,17 @@ NetCDF\\
 \item[]Msys\\
 \url{http://www.mingw.org/msys.shtml}
 
-\item[\raisebox{-5mm}{\includegraphics[height=1cm]{cygwinico}}] \begin{minipage}{12cm}
+\item[\raisebox{-5mm}{\includegraphics[height=1cm]{Cygwin-logo}}] \begin{minipage}{12cm}
 Cygwin\\
 \url{http://www.cygwin.com/}
 \end{minipage}
 
-\item[\raisebox{-4mm}{\includegraphics[height=1cm]{matlabico}}] \begin{minipage}{12cm}
+\item[\raisebox{-4mm}{\includegraphics[height=1cm]{pythonlogo}}] \begin{minipage}{12cm}
+Python\\
+\url{http://www.python.org/}
+\end{minipage}
+
+\item[\raisebox{-4mm}{\includegraphics[height=1cm]{Matlab_Logo}}] \begin{minipage}{12cm}
 \matlab\\
 \url{http://www.mathworks.com/}
 \end{minipage}
