--- a/4-DivaInstallation2.tex
+++ b/4-DivaInstallation2.tex
@@ -17,7 +17,7 @@
 The basic requirements to compile and run \diva are:
 \begin{enumerate}
 \item A command-line interface. With Linux or Mac, the interface is directly available: it is the shell or terminal. With Windows, it is necessary to install a Unix-like environment such as Cygwin (\url{http://www.cygwin.com/}).
-\item A Fortran 95 compiler, such as:
+\item A Fortran 95 compiler with preprocessing -cpp possibilities, such as:
 \begin{itemize}
 \item gfortran (\url{http://gcc.gnu.org/wiki/GFortran}),
 \item ifort (Intel\textsuperscript{\textregistered}, \url{http://software.intel.com/en-us/intel-compilers}),
@@ -112,7 +112,7 @@ nclib=/usr/local/lib/netcdf3ifort/libnetcdf.a
 ...
 \end{verbatim}
 
-If your installation knows the \command{nf-config} command, the compiler and the options for the NetCDF \index{NetCDF} library will be detected automatically during the compilation. If you want to check before compilation, type:
+If your installation knows the \command{nf-config} or \command{nc-config} command, the compiler and the options for the NetCDF \index{NetCDF} library will be detected automatically during the compilation. If you want to check before compilation, type:
 \begin{lstlisting}[style=Bash]
 [charles@gher13 ~]$ nf-config --fc
 gfortran
