--- a/10-DivaPreprocessing.tex
+++ b/10-DivaPreprocessing.tex
@@ -46,6 +46,8 @@ awk '{print $2,$1,$3}' infile > outfile
 \subsection{Method 1: conversion from GEBCO topography\label{sec:topogebco}}
 %------------------------------------------------------
 
+The GEBCO bathymetry is distributed by the British Oceanographic Data Centre (BODC). If you have already registered, you can log in (https://www.bodc.ac.uk/my_account/login/), otherwise it is necessary to register to become a new user. 
+
 Download the complete, global GEBCO One-Minute Grid file (\file{90n90s180w180e.zip}) from \url{http://www.bodc.ac.uk/data/online_delivery/gebco/} and unzip it to obtain the file \file{GridOne.grd}. Download the software \texttt{GebcoCE\_GridOnly} as well and run it. 
 
 \subsubsection{Select your area}
@@ -119,9 +121,9 @@ In the \directory{divastripped} directory, the execution if \command{gebco2diva}
 
 
 
-You can further check the two files by copying them into the {\tt divastripped/input} directory and executing {\tt divacont} and {\tt divagnu}. If results seem right, you can save the files {\tt TopoInfo.data} and {\tt topo.grd} into your main data directory, to be used with {\tt divacont} on all levels defined by {\tt contour.depth}.
+You can further check the two files by copying them into the \directory{divastripped/input} directory and executing \command{divacont} and \command{divagnu}. If results seem right, you can save the files \file{TopoInfo.data} and \file{topo.grd} into your main data directory, to be used with \file{divacont} on all levels defined by \file{contour.depth}.
 
-If everything is stable, you can erase {\tt topogebco.asc} and {\tt topo.gebco} to save disk space. 
+If everything is stable, you can erase \file{topogebco.asc} and \file{topo.gebco} to save disk space. 
 
 \begin{figure}[htpb]
 \centering
@@ -138,7 +140,7 @@ The principle of this method is to apply a \diva analysis to a data file contain
 \subsubsection{Get topography measurements}
 %------------------------------------------
 
-In the present example data points are extracted from \url{http://topex.ucsd.edu/cgi-bin/get_data.cgi} in the same region as the previous case ($9-12^{\circ}W\, \times\, 30-33^{\circ}N$). The output file is composed of three column: \texttt{| longitude | latitude | depth |}, i.e., the same format as \file{data.dat} files used by \diva. Once the file is downloaded, edit its name in \file{topo.dat}. Fig. \ref{fig:guirtopo} shows the individual measurements (coloured dots) in the region of interest. 
+In the present example data points are extracted from \url{http://topex.ucsd.edu/cgi-bin/get_data.cgi} in the same region as the previous case ($9-12^{\circ}W\, \times\, 30-33^{\circ}N$). The output file is composed of three column: \texttt{| longitude | latitude | depth |}, i.e., the same format as \file{data.dat} files used by \diva. Once the file is downloaded, edit its name in \file{topo.dat}. Figure~\ref{fig:guirtopo} shows the individual measurements (coloured dots) in the region of interest. 
 
 
 \begin{figure}[htpb]
@@ -151,7 +153,7 @@ In the present example data points are extracted from \url{http://topex.ucsd.edu
 \subsubsection{Adapt parameters}
 %-------------------------------
 
-As in any \diva analysis, you need to provide parameters concerning the analysis itself and the output grid (file \file{param.par}, described extensively in Section~\ref{sec:param.par}, page \pageref{sec:param.par}). 
+As in any \diva analysis, you need to provide parameters concerning the analysis itself and the output grid (file \file{param.par}, described extensively in Section~\ref{sec:param.par}, page~\pageref{sec:param.par}). 
 
 \begin{itemize}
 \item Correlation length is chosen according to the resolution of the gridded topography you extracted, i.e., the distance between two measurements.
@@ -165,7 +167,7 @@ As in any \diva analysis, you need to provide parameters concerning the analysis
 \subsubsection{Execute \command{divatopo}}
 %----------------------------------------
 
-With the two files \file{topo.dat} and \file{param.par} located in \directory{divastripped/input/}, type \command{divatopo} to launch the analysis. \command{divatopo} automatically creates a contour file according to grid parameters taken in \file{param.par}. The interpolated field is presented on Fig. \ref{fig:guirtopodiva}. Outputs \file{topo.grd} and \file{TopoInfo.dat} may then be used to generate contours (see Section~\ref{sec:contourgen}). 
+With the two files \file{topo.dat} and \file{param.par} located in \directory{divastripped/input/}, type \command{divatopo} to launch the analysis. \command{divatopo} automatically creates a contour file according to grid parameters taken in \file{param.par}. The interpolated field is presented on Fig.~\ref{fig:guirtopodiva}. Outputs \file{topo.grd} and \file{TopoInfo.dat} may then be used to generate contours (see Section~\ref{sec:contourgen}). 
 
 
 
