--- a/17-DivaScriptCode.tex
+++ b/17-DivaScriptCode.tex
@@ -198,7 +198,7 @@ In the code, \texttt{xori} and \texttt{yori} are defined by $x_i=$ \texttt{xori}
 Three files allow getting an output in NetCDF format:\\ 
 \file{netcdfoutputfield.f}, \file{netcdfoutputerror.f}, \file{netcdfoutput.f}. 
 
-The two first routines write the analysed and the error fields in two different NetCDF files: \file{anlysed\_field.nc} and \file{error\_field.nc}. The last programs generates \file{results.nc} which contains both the analysis and the error fields. The information required for the coordinates (xorigin, y origin, dx, dy, xend, yend) are read from \file{GridInfo.dat}.
+The two first routines write the analysed and the error fields in two different NetCDF files: \file{anlysed\_field.nc} and \file{error\_field.nc}. The last programs generates \file{results.nc} which contains both the analysis and the error fields. The information required for the coordinates (xorigin, yorigin, dx, dy, nx, ny) are read from \file{GridInfo.dat}.
 
 \begin{exfile}[H]
 1\\
